--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,23 +2,21 @@ version: '3'
 
 services:
   db:
-    image: mysql:5.7
+    build: ./docker/mysql/
     restart: always
-    environment:
-      - MYSQL_HOST=localhost
-      - MYSQL_PORT=3306  # cannot change this port to other number
-      - MYSQL_DATABASE=my-db # name you want for the database
-      - MYSQL_USER=user # change to whatever username you want
-      - MYSQL_PASSWORD=password #change to the password you want for user
-      - MYSQL_ROOT_PASSWORD=password #change to good root password
+    env_file:
+      - ./docker/mysql/db-environment.env
     ports:
       - "3306:3306"
   web:
     build: .
+    restart: always
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
     ports:
       - "8000:8000"
+    env_file:
+      - .env
     depends_on:
-      - db
+      - "db"
