--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,25 +14,23 @@ services:
     env_file:
       - ./docker/mysql/db-environment.env
     ports:
-      - "3306:3306"
+      - 3306:3306
+  nginx:
+    build: ./docker/nginx/
+    ports:
+      - 8000:8000
+    volumes:
+      - static_volume:/code/static
+    depends_on:
+      - db
+    restart: always
   web:
     build: .
-    command: /code/gunicorn.sh
-#    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - static_volume:/code/static
     expose:
-      - "8000"
+      - 8000
     env_file:
       - .env
     depends_on:
       - db
-  nginx:
-    build: ./docker/nginx/
-    ports:
-      - "8000:8000"
-    volumes:
-      - static_volume:/code/static
-    links:
-      - web
-    restart: always
