--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -26,7 +26,7 @@ http {
 
  upstream myDjangoBlog {
    # "django" is the web project as docker service.
-   server web:8000;
+   server web;
  }
 
  server {
