--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 volumes:
- # static_wd volume will be mounted to both nginx and django gunicorn services.
+ # static volume will be mounted to both nginx and django gunicorn services.
  static_volume:
 
 services:
