move google secret key to env file

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DB_PASSWORD=password
 DB_HOST=db
 DB_PORT=3306
 DB_NAME=my-db
+
+GOOGLE_KEY=599560653645-o1oflg2v7iisnkeghvpi6hquibf8m897.apps.googleusercontent.com
