--- a/.gitignore
+++ b/.gitignore
@@ -102,7 +102,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-
+.env
 .venv
 env/
 venv/
@@ -129,4 +129,3 @@ dmypy.json
 .pyre/
 .idea
 /static
-/.env
