add severel tests

--- a/docker/mysql/db-environment.env
+++ b/docker/mysql/db-environment.env
@@ -1,6 +1,6 @@
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
 MYSQL_DATABASE=my-db
-MYSQL_USER=user
+MYSQL_USER=django_user
 MYSQL_PASSWORD=password
 MYSQL_ROOT_PASSWORD=password
